--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
+    "koa2-swagger-ui": "^5.0.5",
     "mocha": "^8.2.1",
-    "mongoose": "^5.11.4",
     "pg": "^8.5.1",
     "redis": "^3.0.2",
     "sequelize": "^6.3.5",
     "socket.io": "^3.0.4",
     "socket.io-client": "^3.0.4",
     "uuid": "^8.3.1",
-    "ws": "^7.4.1"
+    "ws": "^7.4.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.2.0"
