--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "sequelize-cli": "^6.2.0"
   },
   "scripts": {
